--- a/Masroo3k.Api/appsettings.json
+++ b/Masroo3k.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SQL5110.site4now.net;Database=db_ac1142_mashroo3k;User ID=db_ac1142_mashroo3k_admin;Password=Bss@505050;Encrypt=False;TrustServerCertificate=true;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=SQL5110.site4now.net;Database=db_ac1142_mashroo3k;User ID=db_ac1142_mashroo3k_admin;Password=**********;Encrypt=False;TrustServerCertificate=true;MultipleActiveResultSets=True"
   },
   "Gemini": {
     "ApiKey": "AIzaSyCLCeMXElGa7qZoV2c3x0Xt2PXMQMWIS4E"
