--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VITE_API_URL=https://mashra3k.com/api
-VITE_GEMINI_API_KEY=AIzaSyCLCeMXElGa7qZoV2c3x0Xt2PXMQMWIS4E
+VITE_API_URL=**********
+VITE_GEMINI_API_KEY=**********
 VITE_ENABLE_DEVELOPER_MODE=false
